[gd_scene load_steps=4 format=3 uid="uid://c1gimg78wkykf"]

[ext_resource type="Script" uid="uid://ceqk6qchrn26l" path="res://cutscene_components/dialog_display.gd" id="1_12yag"]
[ext_resource type="Theme" uid="uid://gfka3rjdsg70" path="res://cutscene_components/dialogue_theme.tres" id="2_vxuis"]
[ext_resource type="FontFile" uid="uid://qnfo5nibdmbu" path="res://Texturina-VariableFont_opsz,wght.ttf" id="3_wijlh"]

[node name="DialogDisplay" type="Node"]
script = ExtResource("1_12yag")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_vxuis")
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -401.0
offset_top = -168.0
offset_right = 400.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ActorName" type="RichTextLabel" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Actor Name"
fit_content = true
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DialogText" type="RichTextLabel" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 51)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("3_wijlh")
text = "This is an example."
fit_content = true

[node name="HSeparator2" type="HSeparator" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Responses" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/Responses"]
layout_mode = 2
text = "Button A"
alignment = 0

[node name="Button2" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/Responses"]
layout_mode = 2
text = "Button B"
alignment = 0
